--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "build:db": "cd src/lib && tsc -p tsconfig.json",
-    "migrate": "npm run build:db && node scripts/migrateData.js"
+    "migrate:events": "node scripts/migrateEvents.js"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
@@ -31,11 +30,17 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.9",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "canvas": "^2.11.2",
+    "cross-fetch": "^4.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "form-data": "^4.0.1",
+    "node-fetch": "^3.3.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
