--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "volunteer-portal",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate:events": "node scripts/migrateEvents.js"
+    "migrate:events": "node scripts/migrateEvents.js",
+    "test": "tsx tests/sample.test.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
-    "@mui/material": "^6.1.8",
+    "@mui/material": "^6.1.9",
     "@pdf-lib/fontkit": "^1.1.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
@@ -44,6 +46,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
