--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/pdfmake": "^0.2.8",
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.6.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jspdf-font": "^1.0.7",
     "lucide-react": "^0.461.0",
     "next": "15.0.3",
     "pdfmake": "^0.2.15",
