--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/pdfmake": "^0.2.8",
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
@@ -30,10 +31,14 @@
     "jspdf-font": "^1.0.7",
     "lucide-react": "^0.461.0",
     "next": "15.0.3",
+    "nodemailer": "^6.9.16",
     "pdfmake": "^0.2.15",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "sqlite3": "^5.1.7"
+    "react-hot-toast": "^2.4.1",
+    "react-spinners": "^0.14.1",
+    "sqlite3": "^5.1.7",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.9",
