--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "test": "tsx tests/sample.test.ts"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@mui/material": "^6.1.9",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
     "@pdf-lib/fontkit": "^1.1.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
@@ -33,8 +33,8 @@
     "next": "15.0.3",
     "nodemailer": "^6.9.16",
     "pdfmake": "^0.2.15",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.14.1",
     "sqlite3": "^5.1.7",
